--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         .page {
             max-width: 1100px;
             margin: 0 auto;
+            position: relative; /* για τον κρυφό counter */
         }
 
         /* Λογότυπο επάνω-επάνω, συμπαγές ασπρόμαυρο */
@@ -446,6 +447,20 @@
             text-decoration: underline;
         }
 
+        /* Κρυφός αλλά επιλέξιμος μετρητής κάτω δεξιά */
+        .views {
+            position: absolute;
+            bottom: 10px;
+            right: 12px;
+            font-size: 0.7rem;
+            color: transparent; /* αόρατος κανονικά */
+        }
+
+        .views span::selection {
+            color: #ffffff;      /* άσπρο όταν επιλέγεται */
+            background: #2563eb; /* μπλε φόντο επιλογής */
+        }
+
         @media (max-width: 900px) {
             body {
                 padding: 16px;
@@ -749,6 +764,11 @@
         © <span id="year"></span> printed3d.gr &amp; NAEL Inspirations – 3D Εκτυπώσεις &amp; Χειροποίητες Δημιουργίες.
         Όλα τα δικαιώματα διατηρούνται.
     </footer>
+
+    <!-- κρυφός μετρητής επισκέψεων -->
+    <div class="views">
+        <span id="view-counter">0</span>
+    </div>
 </div>
 
 <script>
@@ -817,6 +837,32 @@
     }
 
     loadGalleryFromGithub();
+
+    // --------- ΚΡΥΦΟΣ ΜΕΤΡΗΤΗΣ ΕΠΙΣΚΕΨΕΩΝ (API Ninjas) ----------
+    const COUNTER_ID = 'nael_inspirations_page';   // μοναδικό ID για αυτή τη σελίδα
+    const API_KEY   = 'b8TNwIeUeOv+788KOJiyZw==MxYAvtFJ6MsKVe92'; // ίδιο key που χρησιμοποιείς
+
+    fetch('https://api.api-ninjas.com/v1/counter?id=' + encodeURIComponent(COUNTER_ID) + '&hit=true', {
+        method: 'GET',
+        headers: {
+            'X-Api-Key': API_KEY
+        }
+    })
+    .then(function(response) {
+        if (!response.ok) {
+            throw new Error('HTTP error ' + response.status);
+        }
+        return response.json();
+    })
+    .then(function(data) {
+        var value = data && typeof data.value === 'number' ? data.value : 0;
+        document.getElementById('view-counter').textContent =
+            new Intl.NumberFormat('el-GR').format(value);
+    })
+    .catch(function(error) {
+        console.error('Σφάλμα στον μετρητή επισκέψεων:', error);
+        document.getElementById('view-counter').textContent = '—';
+    });
 </script>
 </body>
 </html>
