--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
         .page {
             max-width: 1100px;
             margin: 0 auto;
-            position: relative; /* για τον κρυφό counter */
         }
 
         /* Λογότυπο επάνω-επάνω, συμπαγές ασπρόμαυρο */
@@ -447,18 +446,15 @@
             text-decoration: underline;
         }
 
-        /* Κρυφός αλλά επιλέξιμος μετρητής κάτω δεξιά */
-        .views {
-            position: absolute;
-            bottom: 10px;
-            right: 12px;
+        /* Κρυφός μετρητής επισκέψεων – ίδιο χρώμα με φόντο */
+        .page-views {
+            position: fixed;
+            bottom: 4px;
+            right: 6px;
             font-size: 0.7rem;
-            color: transparent; /* αόρατος κανονικά */
-        }
-
-        .views span::selection {
-            color: #ffffff;      /* άσπρο όταν επιλέγεται */
-            background: #2563eb; /* μπλε φόντο επιλογής */
+            color: #f5f5f7; /* ίδιο με το background */
+            z-index: 1;
+            user-select: text; /* να είναι επιλέξιμο */
         }
 
         @media (max-width: 900px) {
@@ -765,10 +761,11 @@
         Όλα τα δικαιώματα διατηρούνται.
     </footer>
 
-    <!-- κρυφός μετρητής επισκέψεων -->
-    <div class="views">
+    <!-- Κρυφός μετρητής σελίδας -->
+    <div class="page-views">
         <span id="view-counter">0</span>
     </div>
+
 </div>
 
 <script>
@@ -838,31 +835,34 @@
 
     loadGalleryFromGithub();
 
-    // --------- ΚΡΥΦΟΣ ΜΕΤΡΗΤΗΣ ΕΠΙΣΚΕΨΕΩΝ (API Ninjas) ----------
-    const COUNTER_ID = 'nael_inspirations_page';   // μοναδικό ID για αυτή τη σελίδα
-    const API_KEY   = 'b8TNwIeUeOv+788KOJiyZw==MxYAvtFJ6MsKVe92'; // ίδιο key που χρησιμοποιείς
+    // --------- COUNTER API NINJAS (κρυφός μετρητής) ----------
+    (function () {
+        const COUNTER_ID = 'nael_inspirations_page';
+        const API_KEY = 'b8TNwIeUeOv+788KOJiyZw==MxYAvtFJ6MsKVe92';
+        const el = document.getElementById('view-counter');
+        if (!el) return;
 
-    fetch('https://api.api-ninjas.com/v1/counter?id=' + encodeURIComponent(COUNTER_ID) + '&hit=true', {
-        method: 'GET',
-        headers: {
-            'X-Api-Key': API_KEY
-        }
-    })
-    .then(function(response) {
-        if (!response.ok) {
-            throw new Error('HTTP error ' + response.status);
-        }
-        return response.json();
-    })
-    .then(function(data) {
-        var value = data && typeof data.value === 'number' ? data.value : 0;
-        document.getElementById('view-counter').textContent =
-            new Intl.NumberFormat('el-GR').format(value);
-    })
-    .catch(function(error) {
-        console.error('Σφάλμα στον μετρητή επισκέψεων:', error);
-        document.getElementById('view-counter').textContent = '—';
-    });
+        fetch('https://api.api-ninjas.com/v1/counter?id=' + encodeURIComponent(COUNTER_ID) + '&hit=true', {
+            method: 'GET',
+            headers: {
+                'X-Api-Key': API_KEY
+            }
+        })
+        .then(function (response) {
+            if (!response.ok) {
+                throw new Error('HTTP error ' + response.status);
+            }
+            return response.json();
+        })
+        .then(function (data) {
+            var value = data && typeof data.value === 'number' ? data.value : 0;
+            el.textContent = new Intl.NumberFormat('el-GR').format(value);
+        })
+        .catch(function (error) {
+            console.error('Σφάλμα στον μετρητή επισκέψεων:', error);
+            el.textContent = '—';
+        });
+    })();
 </script>
 </body>
 </html>
