--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
 
     // --------- COUNTER API NINJAS (κρυφός μετρητής) ----------
     (function () {
-        const COUNTER_ID = 'nael_inspirations_page';
+        const COUNTER_ID = 'nael_inspirations';
         const API_KEY = 'b8TNwIeUeOv+788KOJiyZw==MxYAvtFJ6MsKVe92';
         const el = document.getElementById('view-counter');
         if (!el) return;
@@ -866,3 +866,4 @@
 </script>
 </body>
 </html>
+
