--- a/index.html
+++ b/index.html
@@ -76,6 +76,15 @@
             margin: 0 6px;
         }
 
+        .logo-contacts a {
+            color: var(--text-main);
+            text-decoration: none;
+        }
+
+        .logo-contacts a:hover {
+            text-decoration: underline;
+        }
+
         /* VCF BUTTON ΚΑΤΩ ΑΠΟ ΤΟ LOGO */
         .vcf-block {
             margin-top: 10px;
@@ -446,15 +455,23 @@
             text-decoration: underline;
         }
 
-        /* Κρυφός μετρητής επισκέψεων – ίδιο χρώμα με φόντο */
+        /* Κρυφός μετρητής επισκέψεων – badge hitscounter.dev */
         .page-views {
             position: fixed;
             bottom: 4px;
             right: 6px;
             font-size: 0.7rem;
-            color: #f5f5f7; /* ίδιο με το background */
             z-index: 1;
-            user-select: text; /* να είναι επιλέξιμο */
+            user-select: text;
+        }
+
+        .page-views img {
+            opacity: 0.08;      /* σχεδόν αόρατο */
+            height: 16px;       /* μικρό, διακριτικό */
+        }
+
+        .page-views img:hover {
+            opacity: 0.4;       /* αν το βάλεις επάνω με το ποντίκι, να φαίνεται λίγο περισσότερο */
         }
 
         @media (max-width: 900px) {
@@ -761,9 +778,10 @@
         Όλα τα δικαιώματα διατηρούνται.
     </footer>
 
-    <!-- Κρυφός μετρητής σελίδας -->
+    <!-- Κρυφός μετρητής σελίδας – hitscounter.dev -->
     <div class="page-views">
-        <span id="view-counter">0</span>
+        <img src="https://hitscounter.dev/api/hit?url=https%3A%2F%2Fnasosps.github.io%2Fpage%2F&label=&icon=github&color=%23198754&message=&style=flat&tz=UTC"
+             alt="page views badge">
     </div>
 
 </div>
@@ -834,36 +852,6 @@
     }
 
     loadGalleryFromGithub();
-
-    // --------- COUNTER API NINJAS (κρυφός μετρητής) ----------
-    (function () {
-        const COUNTER_ID = 'nael_inspirations';
-        const API_KEY = 'b8TNwIeUeOv+788KOJiyZw==MxYAvtFJ6MsKVe92';
-        const el = document.getElementById('view-counter');
-        if (!el) return;
-
-        fetch('https://api.api-ninjas.com/v1/counter?id=' + encodeURIComponent(COUNTER_ID) + '&hit=true', {
-            method: 'GET',
-            headers: {
-                'X-Api-Key': API_KEY
-            }
-        })
-        .then(function (response) {
-            if (!response.ok) {
-                throw new Error('HTTP error ' + response.status);
-            }
-            return response.json();
-        })
-        .then(function (data) {
-            var value = data && typeof data.value === 'number' ? data.value : 0;
-            el.textContent = new Intl.NumberFormat('el-GR').format(value);
-        })
-        .catch(function (error) {
-            console.error('Σφάλμα στον μετρητή επισκέψεων:', error);
-            el.textContent = '—';
-        });
-    })();
 </script>
 </body>
 </html>
-
